Tue Jan 29 01:51:16 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - driver.list: update compatibility information for Oneac models (list all
   combinations for the more recent models, and just the base model name for
   units from ~2001).

Tue Jan 29 00:36:35 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - man/tripplite_usb.8: Regenerate man page for tripplite_usb(8)

Tue Jan 29 00:31:55 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: (rev 0.16) More debugging and logging for
   protocol 0004.

Mon Jan 28 11:28:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * driver.list: add compatibility information for
   - Atlantis Land and Mustek Powermust Office 650 (reported by
     Andrea Zicchetti)
   - Oneac XAU models

Mon Jan 28 09:25:12 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * dummy-ups update:
   - variable values are not truncated anymore when loading the
     .dev file,
   - relax the variable existance checking to allow adding valid
     variables that are not listed,
   - complete the manual page (dummy-ups.8),
   - fix a typo error in the sample .dev file,
   - bump the driver version to 0.04.
 
Mon Jan 28 07:36:41 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: Don't clear the magic number after disconnecting
   (prevents the upscli_strerr from displaying useful information).

Sun Jan 27 22:03:23 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: (rev 0.15) Completely enable some commands for
   protocol 0004.

Sun Jan 27 21:26:38 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: Use upscli_disconnect() if the connection can't be
   established or is lost to release the memory that was allocated by
   upscli_connect() (fixes memory leak when connection to the server is lost).
 - clients/upsmon.c: The upscli_disconnect() is now the opposite of
   upscli_connect() and no longer attempts to LOGOUT from the server, so