@@ -1,8 +1,35 @@
-EXTRA_DIST = changelog control copyright description.subst hotplug	\
- nut-cgi.config nut-cgi.docs nut-cgi.examples nut-cgi.postinst nut-cgi.postrm	\
- nut-cgi.preinst nut-cgi.README.Debian nut-cgi.templates nut.config	\
- nut.default nut.dirs nut.docs nut.examples nut-hal-drivers.docs	\
- nut.init nut.links nut.postinst nut.postrm nut.preinst nut.prerm	\
- nut.README.Debian nut.templates nut.TODO.Debian \
- rules watch po/ca.po po/cs.po po/de.po po/fr.po po/POTFILES.in		\
- po/templates.pot po/vi.po
+EXTRA_DIST = \
+ changelog \
+ compat \
+ control \
+ copyright \
+ description.subst \
+ hotplug	\
+ nut-cgi.config \
+ nut-cgi.docs \
+ nut-cgi.examples \
+ nut-cgi.postinst \
+ nut-cgi.postrm	\
+ nut-cgi.preinst \
+ nut-cgi.README.Debian \
+ nut-cgi.templates \
+ nut.config	\
+ nut.default \
+ nut.dirs \
+ nut.docs \
+ nut.examples \
+ nut-hal-drivers.docs	\
+ nut-hal-drivers.preinst	\
+ nut.init \
+ nut.links \
+ nut.postinst \
+ nut.postrm \
+ nut.preinst \
+ nut.prerm	\
+ nut.README.Debian \
+ nut.templates \
+ nut.TODO.Debian \
+ po/ca.po po/cs.po po/de.po po/fr.po po/POTFILES.in		\
+ po/templates.pot po/vi.po \
+ rules \
+ watch 
